// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <Button
      className="button"
      disabled={false}
      onClick={[MockFunction]}
    >
      New Game
    </Button>
  </div>
</div>
`;

exports[`Home should render loading indicator 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <Button
      className="button"
      disabled={true}
      onClick={[MockFunction]}
    >
      Loading...
    </Button>
  </div>
</div>
`;
